--- a/asiaccs/implementation.tex
+++ b/asiaccs/implementation.tex
@@ -1,14 +1,5 @@
 \section{Implementation}
 \label{sec:implementation}
-
-We have implemented a prototype of \system{} to demonstrate its feasibility and 
-evaluate its performance.  Our implementation allows a client to send a request 
-for content through an exit proxy, which will fetch the corresponding 
-encrypted content.  Figure \ref{fig:impl} shows our prototype; the solid line represents
-how \system{} communicates between the components, and the dotted line represents how 
-a traditional CDN would communicate in our prototype.  Here we will discuss each component---client proxy, exit proxy, 
-and CDN---separately, and how they fit together.
-
 \begin{figure}[t]
 \centering
 \includegraphics[width=.4\textwidth]{implementation}
@@ -18,6 +9,44 @@ a traditional CDN would communicate. $\alpha$ represents the latency between the
 and the exit proxy; we simulate additional clients on this path by increasing $\alpha$.}
 \label{fig:impl}
 \end{figure}
+
+
+\begin{figure*}[t!]
+\vspace{-2mm}
+  \begin{minipage}[t]{.31\linewidth}
+    \centering
+     \includegraphics[trim={10 15 10 12},clip,width=\textwidth]{combined}
+    \caption{Time to first byte and time to complete a request with and without \system{}.}
+    \label{fig:completion}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[t]{.29\linewidth}
+    \centering
+    \includegraphics[trim={7 0 10 5},clip,width=\textwidth]{Latency_withoutzero_2}
+    %\vspace{-10mm}
+    \caption{Time to first byte and time to complete a request with varying the file size and latency.}%; this latency corresponds to $\alpha$ in Figure \ref{fig:impl}.}
+    \label{fig:latency}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[t]{.35\linewidth}
+    \centering
+    \includegraphics[trim={7 8 7 7},clip,width=\textwidth]{loggrouped_2}
+\caption{Overhead of different operations performed by \system{}.}
+\label{fig:overhead2}
+  \end{minipage}
+\end{figure*}
+
+
+We have implemented a prototype of \system{} to demonstrate its feasibility and 
+evaluate its performance.  Our implementation allows a client to send a request 
+for content through an exit proxy, which will fetch the corresponding 
+encrypted content.  Figure \ref{fig:impl} shows our prototype; the solid line represents
+how \system{} communicates between the components, and the dotted line represents how 
+a traditional CDN would communicate in our prototype.  Here we will discuss each component---client proxy, exit proxy, 
+and CDN---separately, and how they fit together.
+
+
+
 
 \textbf{CDN.} As the design for \system{} requires encrypted content and identifiers
 to be stored in the CDN, we cannot request content from real-world CDNs without
