--- a/asiaccs/intro.tex
+++ b/asiaccs/intro.tex
@@ -101,11 +101,11 @@ Section~\ref{sec:background}. We discuss the threat model in
 Section~\ref{sec:threat}. In Section~\ref{sec:design}, we detail the design of
 \system{}. We describe our process for obfuscating requests and content in
 Section~\ref{sec:protocol}.  
-Section~\ref{sec:implementation} describes our prototype implementation. Section~
-\ref{sec:sec} analyzes how \system{}
-defends against threats from our adversary. Section~\ref{sec:performance}
+Section~\ref{sec:implementation} describes our prototype implementation. Section~\ref{sec:performance}
 studies the performance implications of the tradeoffs between performance and
-privacy, as well as how \system{} performs relative to a conventional CDN.
+privacy, as well as how \system{} performs relative to a conventional CDN. Section~
+\ref{sec:sec} analyzes how \system{}
+defends against threats from our adversary.
 Section~\ref{sec:discussion} describes various limitations and possible
 avenues for future work, Section~\ref{sec:related} discusses related work, and
 Section~\ref{sec:conclusion} concludes.
