--- a/asiaccs/main.tex
+++ b/asiaccs/main.tex
@@ -93,8 +93,9 @@
 \input{design}
 \input{protocol}
 \input{implementation}
-\input{security}
 \input{performance}
+\input{security}
+
 \input{discussion}
 \input{related_work}
 \input{conclusion}
@@ -108,11 +109,11 @@
 %
 %\microtypesetup{protrusion=true}
 
-\clearpage
+
 \balance
 {
-\bibliographystyle{acm}
-%\bibliographystyle{ACM-Reference-Format}
+%\bibliographystyle{acm}
+\bibliographystyle{ACM-Reference-Format}
 \bibliography{paper}  }
 
 %\vfill
