--- a/asiaccs/paper.bib
+++ b/asiaccs/paper.bib
@@ -20,6 +20,20 @@
   publisher={ACM}
 }
 
+@misc{fosta_sesta,
+  title = "{FOSTA-SESTA is now law—where does that leave the Internet?}",
+  key = "{FOSTA-SESTA}",
+  year = {2018},
+  howpublished = {\url{https://www.privateinternetaccess.com/blog/2018/05/fosta-sesta-is-now-law-where-does-that-leave-the-internet/}}
+}
+
+@misc{netenforementact,
+  title = "{Act to Improve Enforcement of the Law in Social Networks}",
+  key = "{Network Enforcement Act}",
+  year = {2017},
+  howpublished = {\url{https://www.bmjv.de/SharedDocs/Gesetzgebungsverfahren/Dokumente/NetzDG_engl.pdf}}
+}
+
 @article{geambasu2009experiences,
   title="{Experiences building security applications on DHTs}",
   author={Geambasu, Roxana and Falkner, Jarret and Gardner, Paul and Kohno, Tadayoshi and Krishnamurthy, Arvind and Levy, Henry M},
@@ -127,6 +141,7 @@
 @misc{sec230,
   title = "{47 U.S. Code § 230 - Protection for private blocking and screening of offensive material}",
   key = "{47}",
+  year = {2018},
   howpublished = {\url{https://www.law.cornell.edu/uscode/text/47/230}}
 }
 
@@ -174,6 +189,7 @@
 @misc{ars_tor,
   title="{Cloudflare: 94 Percent of the Tor Traffic We See is ``Per Se Malicious''}",
   key="Cloudflare",
+  year = {2016},
   howpublished = {\url{https://arstechnica.com/tech-policy/2016/03/new-data-suggests-94-percent-of-tor-traffic-is-malicious/}}
 }
 
@@ -344,6 +360,7 @@
 @misc{cedexis,
   title = "{Cedexis}",
   key = "Cedexis",
+  year = {2018},
   howpublished = {\url{https://www.cedexis.com/}}
 }
 
@@ -366,6 +383,7 @@
 @misc{akamai_global_traffic,
   title = "{Akamai Empowers Operators to Deploy Their Own Content Distribution Network}",
   key = "Akamai",
+  year = {2018},
   howpublished = {\url{https://www.akamai.com/us/en/resources/content-distribution-network.jsp}}
 }
 
@@ -419,24 +437,28 @@
 @misc{akamai_facts,
   title= "{Akamai: Facts \& Figures}",
   key = "{Akamai}",
+  year = {2018},
   howpublished = {\url{https://www.akamai.com/us/en/about/facts-figures.jsp}}
 }
 
 @misc{cloudflare_nsl,
   title = "{CREDO and Cloudflare Argue Against National Security Letter Gag Orders}",
   key = "{CREDO}",
+  year = {2017},
   howpublished = {\url{https://techcrunch.com/2017/03/23/credo-and-cloudflare-argue-against-national-security-letter-gag-orders/}},
 }
 
 @misc{facebook_surv,
   title = "{How the NSA \& FBI made Facebook the perfect mass surveillance tool.}",
-  key = "{how}",
+  key = "{How}",
+  year = {2014},
   howpublished = {\url{https://venturebeat.com/2014/05/15/how-the-nsa-fbi-made-facebook-the-perfect-mass-surveillance-tool/}}
 }
 
 @misc{nytimes_hatespeech,
   title = "{Delete Hate Speech or Pay Up, Germany Tells Social Media Companies}",
   key = "{delete}",
+  year = {2017},
   howpublished = {\url{https://www.nytimes.com/2017/06/30/business/germany-facebook-google-twitter.html}}
 }
 
@@ -448,25 +470,29 @@
 
 @misc{medium_copyright,
   title = "{Content Delivery Networks Aren’t Notorious Markets}",
-  key = "{content}",
+  year = {2016},
+  key = {Content},
   howpublished = {\url{https://medium.com/niskanen-center/content-delivery-networks-arent-notorious-markets-2a448a549cf7}}
 }
 
 @misc{eff_copyright,
   title = "{Content Delivery Networks (CDNs)}",
-  key = "{content}",
+  year = {2017},
+  key = {Content},
   howpublished = {\url{https://www.eff.org/free-speech-weak-link/cdn}}
 }
 
 @misc{stack_copyright,
   title = "{District court rules against Cloudflare in anti-piracy suit}",
-  key = "{district}",
+  key = "{District}",
+  year = {2017},
   howpublished = {\url{https://thestack.com/security/2017/03/29/district-court-rules-against-cloudflare-in-anti-piracy-suit/}}
 }
 
 @misc{techdirt_copyright,
   title = "{Court Says RIAA Can Just Tell Cloudflare Any Site Is a Grooveshark Clone... And Cloudflare Has 48 Hours To Dump Them}",
-  key = "{}",
+  key = "{Court}",
+  year = {2015},
   howpublished = {\url{https://www.techdirt.com/articles/20151214/17392833079/court-says-riaa-can-just-tell-cloudflare-any-site-is-grooveshark-clone-cloudflare-has-48-hours-to-dump-them.shtml}}
 }
 
@@ -482,6 +508,7 @@
 @misc{cloudflare_tor,
   title = "{The Trouble with Tor}",
   key = "{Trouble}",
+  year = {2016},
   howpublished = {\url{https://blog.cloudflare.com/the-trouble-with-tor/}}
 }
 
@@ -572,9 +599,9 @@
 }
 
 
-@article{eu-copyright,
-key = "eu-copyright",
+@misc{eu-copyright,
+key = "EU Copyright",
 title = "{EU Proposal for a Directive of The European Parliament and of the Council on Copyright in the Digital Single Market}",
 year = 2016,
-note = "\url{https://ec.europa.eu/transparency/regdoc/rep/1/2016/EN/1-2016-593-EN-F1-1.PDF}"
+howpublished = "\url{https://ec.europa.eu/transparency/regdoc/rep/1/2016/EN/1-2016-593-EN-F1-1.PDF}"
 }
