--- a/asiaccs/background.tex
+++ b/asiaccs/background.tex
@@ -32,7 +32,7 @@ CDN caches the response and returns the content to the client.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=.375\textwidth]{plain_cdn_new2}
+\includegraphics[width=\linewidth]{plain_cdn_new2}
 \caption{The relationships between clients, the CDN, and content publishers in 
 CDNs today.}
 \label{fig:basic_cdn}
@@ -138,7 +138,6 @@ such as CDNs, from being held
 liable for the content they distribute, there have been cases where CDNs are forced
 to remove content.  This happened in 2015 involving the RIAA, Cloudflare, and Grooveshark \cite{techdirt_copyright}. In 2017, a district court ruled that Cloudflare is not protected from anti-piracy injunctions by the Digital Millennium Copyright Act (DMCA)~\cite{stack_copyright}.
 
-The role of a CDN as an intermediary has also come into question in new and currently
-pending legislation, including a 2017 German hate speech law~\cite{nytimes_hatespeech} and a bill proposed by the U.S. Senate called Stop Enabling Sex Traffickers Act (SESTA)~\cite{medium_sesta}. Both laws raise the spectre of potentially holding CDNs liable for the content that they distribute, despite the CDN not being a party in the content publishing.
+The role of a CDN as an intermediary has also come into question in recent legislation, including a 2017 German hate speech law~\cite{netenforementact} and a U.S. law known as FOSTA-SESTA~\cite{fosta_sesta}. Both laws raise the spectre of potentially holding CDNs liable for the content that they distribute, despite the CDN not being a party in the content publishing.
 
 %In October 2017, Germany passed a new law that imposes large fines, upwards of five million euros, on social media companies that do not take down illegal, racist, or slanderous comments and posts within 24 hours.  The law targets companies such as Facebook, Google, and Twitter, but could also apply to smaller companies, which could be serviced by CDNs.  In the latter case, it is an open question whether this new law also applies to CDNs.  In the United States, the SESTA bill would make Internet platforms liable for their user's illegal comments and posts.  SESTA would hold CDNs liable for the content that they distribute (despite the CDN not being a party in the content publishing); these types of laws can naturally lead to overblocking, where an intermediary errs on the side of caution and censors more content than it needs to. Such a law may also set a precedent for the censoring other types of content that are unpopular but legal. 
