--- a/asiaccs/protocol.tex
+++ b/asiaccs/protocol.tex
@@ -1,6 +1,6 @@
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.3\textwidth]{publishing_content_new2}
+\includegraphics[width=.75\linewidth]{publishing_content_new2}
 \caption{Publishing content in \system{}.  $k$ is shared between the 
 origin server and the corresponding exit proxy; the CDN has no knowledge of $k$.}
 \label{fig:publishing}
@@ -53,7 +53,7 @@ certify the exit proxy, then it will send the DNS response with
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=.4\textwidth]{key_lookup}
+\includegraphics[width=\linewidth]{key_lookup}
 \caption{How an origin server certifies an exit proxy and distributes its shared
 key to an exit proxy.  In step~(1), 
 the exit proxy sends his self-certifying ID in the {\it Additional} section of the DNS message.  }
@@ -143,7 +143,7 @@ and uses a multicast technique to send to the encrypted response to all clients 
 for this request/response.  Only the original (true) client has $k_{session}$, so only the original (true) client can decrypt the response.  All other clients will discard 
 the encrypted response because they cannot decrypt it.  
 
-\subsection{Clients Joining and Leaving}
+\subsection{Client Churn}
 \label{sec:join}
 
 When a client joins \system{}, it will download \system{} client software.  This
